# delta-helper

./: .gitignore  PRD.md  README.md  build.py  build_uv.py  pack_exe.py  pyproject.toml  requirements.txt  setup_uv.py  verify.py
src/: __init__.py  main.py
src/analytics/: __init__.py  calculator.py  database.py  models.py
src/core/: __init__.py  capture.py  config.py  map_detector.py  ocr_engine.py  route_planner.py
src/ui/: __init__.py  main_window.py  overlay.py  stats_dialog.py
tests/: __init__.py  test_capture.py  test_map_detector.py  test_ocr_engine.py  test_route_planner.py
